--- a/index.html
+++ b/index.html
@@ -97,11 +97,51 @@
             </div>
         </footer>
     </div>
-    <script src="https://formspree.io/js/formbutton-v1.min.js" defer></script>
-    <script>
-      window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments)};
-      formbutton("create", {action: "https://formspree.io/xwkwkwlj"})
-    </script>
+    <script src="https://formspree.io/js/formbutton-v1.0.0.min.js" defer></script>
+
+<script>
+  /* paste this in verbatim */
+  window.formbutton=window.formbutton||function(){(formbutton.q=formbutton.q||[]).push(arguments);};
+
+  /* customize formbutton here*/     
+  formbutton("create", {
+    action: "https://formspree.io/xwkwkwlj",
+    title: "How can we help?",
+    fields: [
+      { 
+        type: "text", 
+        label: "Name:", 
+        name: "Name",
+        required: true,
+        placeholder: "Your Name"
+      },
+      { 
+        type: "email", 
+        label: "Email:", 
+        name: "email",
+        required: true,
+        placeholder: "your@email.com"
+      },
+      {
+        type: "textarea",
+        label: "Message:",
+        name: "message",
+        placeholder: "What's on your mind?",
+      },
+      { type: "submit" }      
+    ],
+    styles: {
+      fontFamily: "Montserrat",
+      title: {
+        background: "orange",
+      },
+      button: {
+        background: "red",
+      }
+    },
+    initiallyVisible: true
+  });
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
 </body>
